# TrafficSystem

./: .cproject  .gitignore  .ninja_deps  .ninja_log  .project  CMakeCache.txt  CMakeLists.txt  Fahrzeug.cpp  Fahrzeug.h  README.md  build.ninja  cmake_install.cmake  fahrrad.cpp  fahrrad.h  main.cpp  pkw.cpp  pkw.h  untitled4
.cmake/api/v1/reply/: cache-v2-c35b5c1a511be48e1c63.json  cmakeFiles-v1-c3d862f64c9fd0504df8.json  codemodel-v2-8c738c50bd396004b9b8.json  index-2024-10-09T09-30-05-0485.json  target-untitled4-Debug-f83839e93b2b9e2a4263.json
Auf3/: SimuClient.cpp  SimuClient.h  SimuClientSocket.cpp
Aufgabenblock_1/: CMakeLists.txt  Fahrzeug.cpp  fahrrad.cpp  main.cpp  pkw.cpp  vertagt_aktion.h  vertagt_liste.h
Aufgabenblock_2/: CMakeLists.txt  CMakeLists.txt.user.5007c64  CMakeLists.txt.user.e7cb582  Fahren.cpp  Fahren.h  Fahrzeug.cpp  Fahrzeug.h  Fahrzeugausnahme.cpp  Fahrzeugausnahme.h  Parken.cpp  Parken.h  README.md  Simulationsobject.cpp  Simulationsobject.h  Simulationsobjekt.cpp  Simulationsobjekt.h  Verhalten.cpp  Verhalten.h  Weg.cpp  Weg.h  fahrrad.cpp  fahrrad.h  main.cpp  pkw.cpp  pkw.h  vertagt_aktion.h  vertagt_liste.h
Aufgabenblock_3/: CMakeLists.txt  Fahren.cpp  Fahren.h  Fahrzeug.cpp  Fahrzeug.h  Fahrzeugausnahme.cpp  Parken.cpp  README.md  Simulationsobjekt.cpp  Simulationsobjekt.h  Weg.cpp  Weg.h  fahrrad.cpp  fahrrad.h  kreuzung.cpp  kreuzung.h  main.cpp  pkw.cpp  pkw.h  simulation.h
build-Aufgabenblock_1-Qt_6_5_2_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  untitled4
build-Aufgabenblock_1-Qt_6_5_2_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-1be4c4e73b7d0daffdf7.json  cmakeFiles-v1-2c9bf6deabb4d92805d2.json  codemodel-v2-a2bf8de9ebbdeb037a88.json  index-2024-10-30T12-55-11-0628.json
build-Aufgabenblock_1-Qt_6_5_2_for_macOS-Debug/.cmake/api/v1/reply.prev/: target-untitled4-Debug-0ec7e2a335be5b08948c.json
build-Aufgabenblock_1-Qt_6_5_2_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-Aufgabenblock_1-Qt_6_5_2_for_macOS-Debug/.qtc_clangd/.cache/clangd/index/: Fahrzeug.cpp.3589A6CB6C59FEDA.idx  Fahrzeug.h.D0E85B358CD6BA0C.idx  __bit_reference.4565313E7DC9CBCF.idx  __locale.2D32E9862A6228BF.idx  __node_handle.299D820E3B884B85.idx  accumulate.h.85C54C11BDD50CDC.idx  adjacent_difference.h.272D79546962F090.idx  aligned_storage.h.985DEFDF3CD3968E.idx  array.7FAD4C5987242955.idx  back_insert_iterator.h.8DC22DC5DB70650A.idx  bernoulli_distribution.h.0FD633B620F86186.idx  binary_search.h.B91FC161A68A2F40.idx  binomial_distribution.h.6A1087E4442E74F2.idx  (+113 more)
build-Aufgabenblock_2-Qt_6_5_2_for_macOS-Debug/: .ninja_deps  .ninja_log  Block2  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Aufgabenblock_2-Qt_6_5_2_for_macOS-Debug/.qtc_clangd/: compile_commands.json
(+1230 files in other folders)
